--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "bundle/lusty"]
 	path = bundle/lusty
 	url = https://github.com/sjbach/lusty
+[submodule "bundle/minibufexplorerpp"]
+	path = bundle/minibufexplorerpp
+	url = https://github.com/vim-scripts/minibufexplorerpp
